// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles hashes in links 1`] = `
"\\"<p><a href=\\\\\\"\\" +
    (book.pageUrl(\\"./test.md\\") + '#' + \\"section\\") +
    \\"\\\\\\">a test</a></p>\\\\n\\""
`;

exports[`handles links 1`] = `
"\\"<p><a href=\\\\\\"\\" +
    (book.pageUrl(\\"./test.md\\")) +
    \\"\\\\\\">a test</a></p>\\\\n\\""
`;

exports[`handles templates at top level 1`] = `
"\\"<h1>check out this variable</h1>\\\\n\\" +
    ( variable ) +
    \\"\\""
`;

exports[`handles templates in code blocks 1`] = `
"\\"<pre><code>\\" +
    ( require(\\"content\\") ) +
    \\"\\\\n</code></pre>\\\\n\\""
`;

exports[`handles templates in html block tags 1`] = `
"\\"<p>\\" +
    ( variable ) +
    \\"</p>\\""
`;

exports[`handles templates in html block tags 2`] = `
"\\"<p>here is a variable: \\" +
    ( variable ) +
    \\"!</p>\\""
`;

exports[`handles templates in inline html 1`] = `
"\\"<p>Check out this variable: <code>\\" +
    ( variable ) +
    \\"</code></p>\\\\n\\""
`;

exports[`handles templates in markdown blocks 1`] = `
"\\"<p>Check out this variable: \\" +
    ( variable ) +
    \\"</p>\\\\n\\""
`;

exports[`ignores complete urls in links 1`] = `"\\"<p><a href=\\\\\\"http://example.com/test.md#section\\\\\\">a test</a></p>\\\\n\\""`;
